@@ -23,6 +23,8 @@
     
     - New Input boolean attribute accessors: autofocus(), multiple(), required().
     
+    - Constraints have new experimental method fetch_error_message().
+    
     - New Czech (cs) I18N translation by Jan Grmela.
     
     - mk_inherited_accessors() now also creates a *_no_inherit() method.
